<resources>
    <string name="app_name">Bazar</string>
    <string name="app_name_bazar">Bazar Inc</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="dashboard">Name</string>
    <string name="purchase_name">Purchase Name</string>
    <string name="product_name">Product Name</string>
    <string name="category_name">Category Name</string>
    <string name="ok">Ok</string>
    <string name="shop_name">Shop Name</string>
    <string name="agreement">Agreement Date</string>
    <string name="agreements">Agreement</string>
    <string name="address">Address</string>
    <string name="shop_address">Shop Address</string>
    <string name="owner_address">Owner Address</string>
    <string name="details">Details</string>
    <string name="chatlist">Chat List</string>
    <string name="update_profile">Update </string>
    <string name="update_password">Update </string>
    <string name="purchase_details">Purchase Details</string>
    <string name="product_details">Product Details</string>
    <string name="license_number">License Number</string>
    <string name="create_account">Create Account</string>
    <string name="step_one">Next</string>
    <string name="step_two">Previous</string>
    <string name="email">Email</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="with">Login with Email or Mobile number</string>
    <string name="password">Password</string>
    <string name="mobile">Mobile Number</string>
    <string name="purchase_no">Purchase No</string>
    <string name="sign_up">Sign Up</string>
    <string name="stock">Stock</string>
    <string name="product_code">Product Code</string>
    <string name="sell_price">Sell Price</string>
    <string name="supplier_price">Supplier Price</string>
    <string name="item">Item</string>
    <string name="quantity">Quantity</string>
    <string name="rate">Rate</string>
    <string name="discount">Discount</string>
    <string name="total">Total</string>
    <string name="unit">Unit</string>
    <string name="grand_total">Grand Total</string>
    <string name="account">Do not Have a account?</string>
    <string name="sine_in">Please sign in to continue</string>
    <string name="image_size_is_too_large">画像サイズが大きすぎます"</string>
    <string name="txt_close">閉じる</string>
    <string name="home">Home</string>
    <string name="store">Store</string>
    <string name="order">Orders</string>
    <string name="delivery">Deliveries</string>
    <string name="settings">Settings</string>
    <string name="mypage">My Page</string>
    <string name="category">Category</string>
    <string name="change_password">Change Password</string>
    <string name="product">Product</string>
    <string name="notice">Notice</string>
    <string name="supplier">Supplier</string>
    <string name="purchase">Purchase</string>
    <string name="system">System Product</string>
    <string name="add_system">Add Product</string>
    <string name="online_customer">Online Customer</string>
    <string name="offline_customer">Offline Customer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="public_post">Public</string>
    <string name="own_post">My Posts</string>
    <string name="newsfeed">Newsfeed</string>
</resources>
