<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/white">

    <RelativeLayout
            android:id="@+id/root_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="1.5"
            android:visibility="visible">

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                <androidx.appcompat.widget.SwitchCompat
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center_horizontal"
                        android:id="@+id/switch_status"
                        android:text="Status"
                        android:layout_marginLeft="5dp"
                        app:switchPadding="20dp"
                        android:textStyle="bold"
                        android:textSize="19sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                <EditText
                        android:visibility="visible"
                        android:id="@+id/et_purchase_name"
                        android:inputType="text"
                        android:drawablePadding="10dp"
                        android:drawableLeft="@drawable/user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:hint="@string/purchase_name"
                        android:paddingBottom="20dp"
                        android:textColor="@color/black" />
                <EditText
                        android:visibility="visible"
                        android:id="@+id/et_details"
                        android:inputType="text"
                        android:drawablePadding="10dp"
                        android:drawableLeft="@drawable/file"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:hint="@string/purchase_details"
                        android:maxLines="3"
                        android:paddingBottom="20dp"
                        android:textColor="@color/black" />
                <EditText
                        android:visibility="visible"
                        android:id="@+id/et_purchase_no"
                        android:drawablePadding="10dp"
                        android:drawableLeft="@drawable/symbols"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:hint="@string/purchase_no"
                        android:paddingBottom="20dp"
                        android:textColor="@color/black" />
                <EditText
                        android:focusable="false"
                        android:id="@+id/et_purchase_date"
                        android:drawablePadding="10dp"
                        android:drawableLeft="@drawable/calendar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:hint="@string/purchase_date"
                        android:paddingBottom="20dp"
                        android:textColor="@color/black" />

                <RelativeLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >


                    <EditText
                            android:inputType="number"
                            android:layout_alignParentLeft="true"
                            android:visibility="visible"
                            android:id="@+id/et_stock"
                            android:drawablePadding="10dp"
                            android:drawableLeft="@drawable/shipping"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:hint="@string/stock"
                            android:paddingBottom="20dp"
                            android:textColor="@color/black" />
                    <EditText
                            android:inputType="number"
                            android:layout_alignParentRight="true"
                            android:visibility="visible"
                            android:id="@+id/et_item"
                            android:drawablePadding="10dp"
                            android:drawableLeft="@drawable/item"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:hint="@string/item"
                            android:paddingBottom="20dp"
                            android:textColor="@color/black" />


                </RelativeLayout>
                <RelativeLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >


                    <EditText
                            android:inputType="number"
                            android:layout_alignParentLeft="true"
                            android:visibility="visible"
                            android:id="@+id/et_quantity"
                            android:drawablePadding="10dp"
                            android:drawableLeft="@drawable/tube"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:hint="@string/quantity"
                            android:paddingBottom="20dp"
                            android:textColor="@color/black" />
                    <EditText
                            android:inputType="numberDecimal"

                            android:layout_alignParentRight="true"
                            android:visibility="visible"
                            android:id="@+id/et_rate"
                            android:drawablePadding="10dp"
                            android:drawableLeft="@drawable/miscellaneous"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:hint="@string/rate"
                            android:paddingBottom="20dp"
                            android:textColor="@color/black" />


                </RelativeLayout>
                <RelativeLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >


                    <EditText
                            android:inputType="numberDecimal"
                            android:layout_alignParentLeft="true"
                            android:visibility="visible"
                            android:id="@+id/et_discount"
                            android:drawablePadding="10dp"
                            android:drawableLeft="@drawable/discounts"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:hint="@string/discount"
                            android:paddingBottom="20dp"
                            android:textColor="@color/black" />
                    <EditText
                            android:focusable="false"
                            android:inputType="numberDecimal"
                            android:layout_alignParentRight="true"
                            android:visibility="visible"
                            android:id="@+id/et_total"
                            android:drawablePadding="10dp"
                            android:drawableLeft="@drawable/equipment"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:hint="@string/total"
                            android:paddingBottom="20dp"
                            android:textColor="@color/black" />


                </RelativeLayout>
                <RelativeLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >


                    <EditText
                            android:focusable="false"
                            android:inputType="numberDecimal"
                            android:layout_alignParentLeft="true"
                            android:visibility="visible"
                            android:id="@+id/et_grand_total"
                            android:drawablePadding="10dp"
                            android:drawableLeft="@drawable/tag"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:hint="@string/grand_total"
                            android:paddingBottom="20dp"
                            android:textColor="@color/black" />


                    <Spinner
                            android:layout_marginTop="30dp"
                            android:layout_alignParentRight="true"
                            android:id="@+id/spinner_unit"
                            android:layout_width="150dp"
                            android:layout_height="50dp"
                            android:background="@drawable/test"
                            android:visibility="visible" />
                </RelativeLayout>
                <Button
                        android:id="@+id/btn_ok"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/black_capsul"
                        android:stateListAnimator="@null"
                        android:text="Done"
                        android:textColor="#fff"
                        android:textSize="15sp" />
                <View
                        android:layout_width="match_parent"
                        android:layout_height="25dp"/>
            </LinearLayout>


        </ScrollView>


    </RelativeLayout>

    <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal|center_vertical"
            android:indeterminateDrawable="@drawable/progress"
            android:visibility="gone" />
</RelativeLayout>