<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

    <RelativeLayout
            android:layout_below="@id/tv_1"
            android:layout_above="@+id/rlt_footer"
            android:id="@+id/main_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    <TextView
            android:id="@+id/tv_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/create_account"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold" />
    <RelativeLayout
            android:background="@color/white"
            android:id="@+id/rlt_footer"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10px"
            android:visibility="visible">
        <View
                android:background="@color/black"
                android:layout_width="match_parent"
                android:layout_height="5px"/>


        <androidx.appcompat.widget.AppCompatButton
                android:layout_marginTop="10dp"
                android:background="@drawable/capsule_button"


                android:textColor="@color/white"
                android:visibility="gone"
                android:id="@+id/btn_step_2"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="18dp"

                android:layout_centerVertical="true"
                android:text="@string/step_two"
                android:gravity="center"
                android:layout_width="150dp"
                android:layout_height="50dp"/>
        <androidx.appcompat.widget.AppCompatButton
                android:layout_marginTop="10dp"
                android:background="@drawable/capsule_button"
                android:textColor="@color/white"
                android:id="@+id/btn_step_1"
                android:layout_centerVertical="true"
                android:layout_marginRight="18sp"
                android:layout_alignParentRight="true"
                android:textAlignment="center"
                android:gravity="center"
                android:text="@string/step_one"
                android:layout_width="150dp"
                android:layout_height="50dp"/>
    </RelativeLayout>
</RelativeLayout>


