<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:background="@color/white"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="vertical">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/img_user_profile"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="31dp"
                        android:src="@drawable/img_profile_icon" />

                <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/img_user_add"
                        android:layout_width="37dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="-75dp"
                        android:background="@android:color/transparent"
                        android:src="@drawable/img_plus_icon"
                        android:visibility="visible" />
            </LinearLayout>
            <EditText
                    android:visibility="visible"
                    android:id="@+id/et_name"
                    android:inputType="text"
                    android:drawablePadding="10dp"
                    android:drawableLeft="@drawable/user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:hint="@string/name"
                    android:paddingBottom="20dp"
                    android:textColor="@color/black" />
            <EditText
                    android:visibility="visible"
                    android:id="@+id/et_mobile"
                    android:inputType="phone"
                    android:drawablePadding="10dp"
                    android:drawableLeft="@drawable/smartphone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:hint="@string/mobile"
                    android:paddingBottom="20dp"
                    android:textColor="@color/black" />
            <EditText
                    android:id="@+id/et_email"
                    android:inputType="textEmailAddress"
                    android:drawablePadding="10dp"
                    android:drawableLeft="@drawable/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:hint="@string/email"
                    android:paddingBottom="20dp"
                    android:textColor="@color/black" />
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    >
                <EditText
                        android:inputType="textPassword"
                        android:id="@+id/et_password"
                        android:drawablePadding="10dp"
                        android:drawableLeft="@drawable/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/password"
                        android:paddingBottom="20dp"
                        android:textColor="@color/black" />
                <ImageView
                        android:layout_marginTop="15dp"
                        android:layout_toLeftOf="@+id/et_password"
                        android:id="@+id/show_pass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"

                        android:paddingRight="10dp"
                        android:src="@drawable/hidden_password" />
            </RelativeLayout>
            <EditText
                    android:visibility="visible"
                    android:id="@+id/et_address"
                    android:inputType="text"
                    android:drawablePadding="10dp"
                    android:drawableLeft="@drawable/adress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:hint="@string/address"
                    android:paddingBottom="20dp"
                    android:textColor="@color/black" />
        </LinearLayout>

        <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal|center_vertical"
                android:visibility="gone" />
    </RelativeLayout>


